# Curso-C-

./: README.md
untitled/: Altavoz.cpp  Altavoz.h  BD.csv  CMakeLists.txt  Calzado.cpp  Calzado.h  Cli.csv  Cliente.cpp  Cliente.h  Clientes.csv  Componente.cpp  Componente.h  Electronico.cpp  Electronico.h  Falda.cpp  Falda.h  Metodos.h  Pantalon.cpp  Pantalon.h  Persona.cpp  Persona.h  Ropa.cpp  Ropa.h  Televisor.cpp  Televisor.h  Tenis.cpp  Tenis.h  Ticket.cpp  Ticket.h  Zapatos.cpp  Zapatos.h  main.cpp
