cmake_minimum_required(VERSION 3.17)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled main.cpp Electronico.cpp Electronico.h Componente.cpp Componente.h Altavoz.cpp Altavoz.h Televisor.cpp Televisor.h Ropa.cpp Ropa.h Falda.cpp Falda.h Pantalon.cpp Pantalon.h Calzado.cpp Calzado.h Tenis.cpp Tenis.h Zapatos.cpp Zapatos.h Metodos.h Persona.cpp Persona.h Cliente.cpp Cliente.h Ticket.cpp Ticket.h Ticket.cpp Ticket.h)